--- a/android/lib/resource/src/main/res/values/strings.xml
+++ b/android/lib/resource/src/main/res/values/strings.xml
@@ -403,4 +403,6 @@
     <string name="connection_details_in">In</string>
     <string name="feature_indicators_show_more">%1$s more...</string>
     <string name="connect">Connect</string>
+    <string name="connect_on_start">Connect on device start-up</string>
+    <string name="connect_on_start_footer">Automatically connect on device start-up. Only works if the app has been granted the VPN permission.</string>
 </resources>
