--- a/gui/locales/messages.pot
+++ b/gui/locales/messages.pot
@@ -2198,6 +2198,9 @@ msgstr ""
 msgid "Auto-connect is called Always-on VPN in the Android system settings and it makes sure you are constantly connected to the VPN tunnel and auto connects after restart."
 msgstr ""
 
+msgid "Automatically connect on device start up. Please make sure the app has VPN permission."
+msgstr ""
+
 msgid "Automatically connect when the app launches. This setting will be replaced with a new connect on device start-up feature in a future update."
 msgstr ""
 
@@ -2205,6 +2208,9 @@ msgid "Blocking internet (device offline)"
 msgstr ""
 
 msgid "Changes to DNS related settings might not go into effect immediately due to cached results."
+msgstr ""
+
+msgid "Connect on boot"
 msgstr ""
 
 msgid "Connecting..."
