--- a/android/lib/resource/src/main/res/values/strings.xml
+++ b/android/lib/resource/src/main/res/values/strings.xml
@@ -310,7 +310,7 @@
     <string name="discard_changes">Discard changes?</string>
     <string name="discard">Discard</string>
     <string name="add_location_to_list">Add %s to list</string>
-    <string name="remove_location_from_list">Remove %s from list</string>
+    <string name="remove_location_from_list">Remove %s from %s</string>
     <string name="location_was_added_to_list">%s was added to \"%s\"</string>
     <string name="location_added">%s (added)</string>
     <string name="edit_name">Edit name</string>
