--- a/gui/locales/messages.pot
+++ b/gui/locales/messages.pot
@@ -2321,7 +2321,7 @@ msgstr ""
 msgid "Invalid or missing value \"%s\""
 msgstr ""
 
-msgid "It looks like you\\’ve entered an account number instead of a voucher code. If you would like to change the active account, please log out first."
+msgid "It looks like you’ve entered an account number instead of a voucher code. If you would like to change the active account, please log out first."
 msgstr ""
 
 msgid "Lets you select apps that should access the Internet directly without going through the VPN tunnel."
