--- a/android/lib/resource/src/main/res/values/strings.xml
+++ b/android/lib/resource/src/main/res/values/strings.xml
@@ -252,7 +252,7 @@
     <string name="wireguard_port_info_port_range">The custom port can be any value inside the valid ranges: %s.</string>
     <string name="wireguard_custon_port_title">Custom</string>
     <string name="port">Port</string>
-    <string name="custom_port_dialog_title">WireGuard custom port</string>
+    <string name="custom_port_dialog_title">%s custom port</string>
     <string name="custom_port_dialog_submit">Set port</string>
     <string name="custom_port_dialog_remove">Remove custom port</string>
     <string name="custom_port_dialog_valid_ranges">Valid ranges: %s</string>
@@ -385,4 +385,6 @@
     <string name="failed_to_set_current_unknown_error">Failed to set to current - Unknown reason</string>
     <string name="location_was_removed_from_list">%s was removed from \"%s\"</string>
     <string name="create_custom_list_message">\"%s\" was created</string>
+    <string name="upd_over_tcp">UDP-over-TCP</string>
+    <string name="port_x">Port: %s</string>
 </resources>
