--- a/gui/locales/messages.pot
+++ b/gui/locales/messages.pot
@@ -2163,6 +2163,9 @@ msgstr ""
 msgid "%s (added)"
 msgstr ""
 
+msgid "%s custom port"
+msgstr ""
+
 msgid "%s using %s"
 msgstr ""
 
@@ -2635,9 +2638,6 @@ msgid "While connected, your real location is masked with a private and secure l
 msgstr ""
 
 msgid "WireGuard MTU"
-msgstr ""
-
-msgid "WireGuard custom port"
 msgstr ""
 
 msgid "WireGuard obfuscation"
