--- a/gui/locales/messages.pot
+++ b/gui/locales/messages.pot
@@ -2163,6 +2163,9 @@ msgstr ""
 msgid "%s (added)"
 msgstr ""
 
+msgid "%s custom port"
+msgstr ""
+
 msgid "%s was added to \"%s\""
 msgstr ""
 
@@ -2451,6 +2454,9 @@ msgstr ""
 msgid "Please use the <b>Always-on</b> system setting instead by following the guide in <b>%s</b> above."
 msgstr ""
 
+msgid "Port: %s"
+msgstr ""
+
 msgid "Preferences"
 msgstr ""
 
@@ -2553,6 +2559,9 @@ msgstr ""
 msgid "Toggle VPN"
 msgstr ""
 
+msgid "UDP-over-TCP"
+msgstr ""
+
 msgid "Unable to apply firewall rules. Please troubleshoot or send a problem report."
 msgstr ""
 
@@ -2629,9 +2638,6 @@ msgid "While connected, your real location is masked with a private and secure l
 msgstr ""
 
 msgid "WireGuard MTU"
-msgstr ""
-
-msgid "WireGuard custom port"
 msgstr ""
 
 msgid "WireGuard obfuscation"
