Update split tunneling description

--- a/android/lib/resource/src/main/res/values/strings.xml
+++ b/android/lib/resource/src/main/res/values/strings.xml
@@ -153,7 +153,7 @@
     <string name="filter">Filter</string>
     <string name="select_location_description">While connected, your real location is masked with a private and secure location in the selected region.</string>
     <string name="split_tunneling_description">Lets you select apps that should access the Internet directly without going through the VPN tunnel.</string>
-    <string name="split_tunneling_description_warning">Attention: Split tunneling is a privacy risk.</string>
+    <string name="split_tunneling_description_warning">Attention: If "Block connections without VPN" is enabled, split apps will not have Internet. Always keep in mind that split tunneling is a privacy risk.</string>
     <string name="enable">Enable</string>
     <string name="enable_custom_dns">Use custom DNS server</string>
     <string name="add_a_server">Add a server</string>
